# koyyy

./: .gitignore  .replit  .vercelignore  DEPLOYING_TO_VERCEL.md  Dockerfile  README.md  VERCEL_DEPLOYMENT.md  VERCEL_DEPLOYMENT_GUIDE.md  VERCEL_TROUBLESHOOTING.md  app.py  app.py.vercel  audio_extractor.py  bot.py  koyeb.yml  koyeb_deploy.md  main.py  main_vercel.py  media_downloader.py  pinterest_extractor.py  prepare_for_vercel.sh  prepare_vercel_deployment.py  pyproject.toml  replit.nix  requirements-vercel.txt  requirements.txt  user_storage.py  user_storage_vercel.py  utils.py  vercel.json  verify_deployment.py
api/: index.py  index.py.debug  index.py.vercel  webhook.py
static/css/: style.css
templates/: index.html
